Fix home page extra padding-top issue

--- a/clubs/static/custom.css
+++ b/clubs/static/custom.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 body {
-  padding-top: 75px;
+  padding-top: 0px;
 }
 
 a {
